# electronics_sales_network_API

./: .env.example  README.md  docker-compose.yaml  manage.py  pyproject.toml
electronics_sales_network_API/: asgi.py  settings.py  urls.py  wsgi.py
goods/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_retailnetwork_contact_alter_retailnetwork_good_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
